# vigil

./: .gitignore  .vigilrc  ACTIVE_TASK.md  AUTHORS  CLAUDE.md  LICENSE  NOTICE  PRODUCT_VISION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.gitea/workflows/: test.yml
.github/workflows/: test.yml
docs/: MEDIUM_ARTICLE.md
docs/attacks/: comment-and-control.md
plugin/: README_INSTALL.md  hook.sh  manifest.json
src/vigil/: __init__.py  cli.py  config.py  engine.py  findingslog.py  reporter.py  telemetry.py
src/vigil/rules/: __init__.py  agency.py  base.py  deps.py  deserialization.py  docker.py  dockerfile.py  gha.py  github_actions.py  iam.py  js_security.py  k8s.py  logging_secrets.py  mcp_security.py  nginx.py  packages.py  prompt_injection.py  secrets.py  swift.py  terraform.py  trivy.py
tests/: conftest.py  test_cli_init.py  test_config.py  test_dedup.py  test_engine.py  test_findingslog.py  test_reporter.py  test_rules_agency.py  test_rules_deserialization.py  test_rules_docker.py  test_rules_dockerfile.py  test_rules_gha.py  test_rules_github_actions.py  test_rules_iam.py  test_rules_js_security.py  test_rules_k8s.py  test_rules_logging.py  test_rules_mcp.py  test_rules_nginx.py  test_rules_packages.py  test_rules_prompt_injection.py  test_rules_secrets.py  test_rules_secrets_extended.py  test_rules_shell.py  test_rules_swift.py  test_rules_terraform.py  test_rules_trivy.py  test_rules_web.py  test_telemetry.py  test_triage.py
tests/fixtures/: Dockerfile.safe  Dockerfile.unsafe  docker-compose-safe.yml  docker-compose-unsafe.yml
vigil-action/: action.yml  workflow-template.yml
vigil-vscode/: README.md  package-lock.json  package.json  tsconfig.json
