[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil"
version = "0.1.0"
description = "AI coding security co-pilot — blocks insecure code at generation time"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vigil = "vigil.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
# B101: assert in tests; B404/B603/B607: vigil intentionally shells out to trivy/pip-audit/npm
# with hardcoded command names and list-form args — no shell injection possible
skips = ["B101", "B404", "B603", "B607"]
